[package]
name = "shuma-card"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
publish.workspace = true
description = "Tipos de shipote: WorkspaceSpec, PipelineSpec, CommandRef, FlowEdge. Compilan a Cards de card-core."

[dependencies]
card-core = { workspace = true }
# Orquestador único de la suite (Linux): shuma compila sus specs a `Intent`
# de sandokan en vez de manejar su propio ciclo de vida. Ver SDD de sandokan.
sandokan-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
ulid = { workspace = true }

[dev-dependencies]
# Prueba end-to-end del puente: spec de shuma → Intent → proceso aislado real.
sandokan-local = { workspace = true }
tokio = { workspace = true }
