[package]
name = "shuma-module-minga"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
publish.workspace = true
description = "shuma-module-minga — tab del shell que muestra el estado del repo Minga del cwd: counts, raíces recientes con su α-hash y dialect, y un monitor de pasos pendientes (atestaciones no firmadas locales)."

[dependencies]
shuma-module = { path = "../shuma-module" }
minga-core = { workspace = true }
minga-store = { workspace = true }
minga-vfs = { workspace = true }
llimphi-ui = { workspace = true }
llimphi-theme = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
